# bard

./: .gitignore  COPYING  Makefile  README.md  configure  configure.in  mkinstalldirs
config/: Makefile  common_make_rules  config.in  project.mak
gcw0/: Bard_Help.html  Makefile  bard.sh  bard_ml.gcw0.desktop  bard_ml.sh  default.gcw0.desktop  gcw0.COPYING
include/: Makefile  bard.h  bard_color.h  bard_display.h  bard_render.h  bard_speech.h  bard_system.h  bard_token.h  bard_window.h
main/: Makefile  bard_main.c
nanonote/: Makefile  bard.gmenu2x  make_bard_ipk  make_libzip_ipk
pandora/: Bard_Help.html  Makefile  PXML.xml  bard.sh
src/: Makefile  bard.c  color.c  display.c  epub.c  file_select.c  font_select.c  help.c  image.c  info.c  input.c  lang.c  menu.c  recent.c  render.c  speech.c  system.c  text.c  token.c  utils.c  voice_select.c  window.c  xhtml.c
